--- a/app/src/main/res/navigation/navigation_main.xml
+++ b/app/src/main/res/navigation/navigation_main.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/navigation_main">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/navigation_main"
+    app:startDestination="@id/convertCurrencyFragment">
 
+    <fragment
+        android:id="@+id/convertCurrencyFragment"
+        android:name="com.bm.currency.features.fragment.convertcurrency.ui.ConvertCurrencyFragment"
+        tools:layout="@layout/fragment_convert_currency"/>
 </navigation>
